<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_drawer_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_menu_devices"
            android:title="@string/devices" />
        <item
            android:id="@+id/nav_devdisco"
            android:icon="@drawable/ic_menu_device_discovery"
            android:title="@string/device_discovery" />
        <item
            android:id="@+id/nav_gateway"
            android:icon="@drawable/ic_menu_gateway_discovery"
            android:title="@string/gateway" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>

</menu>
