<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_page_bg"
    tools:context="com.tip2panel.smarthome.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home_page_logo"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/login_button_text_size"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/button_loginfb"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login_with_fb"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/login_button_text_size"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/login_button_text_size"
        android:background="@color/colorPrimary" />

</LinearLayout>
