<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/item_padding_left"
            android:paddingLeft="@dimen/item_padding_right"
            android:paddingStart="16dp">

            <RadioButton
                android:id="@+id/inclusionModeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inclusion_mode" />

            <RadioButton
                android:id="@+id/exclusionModeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exclusion_mode" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/discovery_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorHint"
                android:gravity="center_vertical|center_horizontal"
                android:padding="16dp"
                android:text="@string/device_inclusion_hint"
                android:textColor="@color/colorTextNavigationItem"
                android:textSize="12sp"
                android:textStyle="italic" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_padding_left"
                android:layout_marginRight="@dimen/item_padding_right"
                android:max="100"
                android:progress="5"
                android:progressTint="@color/colorPrimary"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/inclusionFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:clickable="true"
            android:scaleType="center"
            android:scaleX="4"
            android:scaleY="4"
            android:src="@android:color/transparent"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="10dp"
            app:fabSize="auto" />

        <TextView
            android:id="@+id/inclusionFabTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="16dp"
            android:text="@android:string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
